deploy/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  labels:
    app: mongo
    tier: backend
spec:
  ports:
  - port: 27017
    targetPort: 27017
  selector:
    app: mongo
    tier: backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
spec:
  selector:
    matchLabels:
      app: mongo
      tier: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: mongo
        tier: backend
    spec:
      containers:
      - name: mongo
        image: mongo:latest
        resources:
          requests:
            cpu: 100m
            memory: 800Mi
        ports:
        - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: demochat
  labels:
    app: demochat
    tier: frontend
spec:
  type: NodePort
  ports:
  - protocol: TCP
    port: 5000
  selector:
    app: demochat
    tier: frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demochat
spec:
  selector:
    matchLabels:
      app: demochat
      tier: frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: demochat
        tier: frontend
    spec:
      containers:
      - name: demochat
        image: ahromis/demochat:kickabout
        resources:
          requests:
            cpu: 100m
            memory: 500Mi
        ports:
        - containerPort: 5000
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: demochat
spec:
  rules:
    - host: demochat.qa.deerwald.com
      http:
        paths:
          - backend:
              serviceName: demochat
              servicePort: 5000
            path: /
